--- a/index.html
+++ b/index.html
@@ -4,9 +4,15 @@
   <meta charset="UTF-8">
   <title>Directives</title>
 </head>
-<body>
+<body ng-controller="mainCtrl">
+	<ng-view></ng-view>
   <script src="//cdnjs.cloudflare.com/ajax/libs/angular.js/1.3.15/angular.js"></script>
   <script src="//cdnjs.cloudflare.com/ajax/libs/angular.js/1.3.15/angular-route.js"></script>
   <script src="app/app.js"></script>
+  <script src="app/mainCtrl.js"></script>
+  <script src="app/weatherService.js"></script>
+  <script src="app/directives/dirDisplay.js"></script>
+  <script src="app/directives/weatherDir.js"></script>
+
 </body>
 </html>
